# ArKG-Chile-Data

./: .gitignore  .pre-commit-config-uv.yaml  .pre-commit-config.yaml  Makefile  README.md  README_UV.md  SETUP_COMPLETE.md  pdf_extractor.py  pyproject.toml  requirements.txt  setup_uv.py
